--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href=""/>
 
-    <title>sirloso react-tsx-template</title>
+    <title>los studios</title>
     <meta name="title" content="sirloso react-tsx-template">
     <meta name="description"
         content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
