--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
          <!-- Primary Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href=""/>
@@ -33,5 +33,6 @@
     <body>
         <div id='root'></div>
         <script src="../src/index.js"></script>
+        <div id="p5"></div>
     </body>
 </html>
