--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,42 @@
 <html>
-    <head>
-         <!-- Primary Meta Tags -->
+
+<head>
+    <link rel="shortcut icon" type="image/x-icon" href="./defaultFavicon.png" />
+    <script>
+        if (!navigator.userAgent.includes("Chrome") && !navigator.userAgent.includes("Apple") || window.innerWidth >= 800) {
+            var canvas = document.createElement('canvas');
+            canvas.width = 16; canvas.height = 16;
+            var ctx = canvas.getContext('2d');
+
+            // background
+            let color = Math.floor(Math.random() * 16777215).toString(16)
+            ctx.fillStyle = `#${color}`;
+            window.color = color
+            ctx.fillRect(0, 0, 16, 16);
+
+
+            // text
+            ctx.textAlign = "center"
+            ctx.textBaseline = "middle"
+            ctx.fillStyle = "white"
+
+            let fontSize = window.innerWidth < 800 ? 10 : 10
+            let height2 = ctx.canvas.height / 2
+
+            let width2 = ctx.canvas.width / 2
+            ctx.font = `${fontSize}px Gruppo`;
+            // ctx.fillText("ls",width2,height2);
+
+            var link = document.querySelector("link[rel*='icon']") || document.createElement('link');
+            console.log(link)
+            link.type = 'image/x-icon';
+            link.rel = 'shortcut icon';
+            link.href = canvas.toDataURL("image/x-icon");
+            alert(link.href)
+            document.getElementsByTagName('head')[0].appendChild(link);
+        }
+    </script>
+    <!-- Primary Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
@@ -29,41 +65,12 @@
         content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
     <meta property="twitter:image"
         content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-    </head>
-    <body>
-        <script>
-            var canvas = document.createElement('canvas');
-            canvas.width = 16; canvas.height = 16;
-            var ctx = canvas.getContext('2d');
+</head>
 
-            // background
-            let color = Math.floor(Math.random()*16777215).toString(16)
-            ctx.fillStyle = `#${color}`;
-            window.color = color
-            ctx.fillRect(0, 0, 16, 16);
+<body>
+    <div id='root'></div>
+    <script src="../src/index.js"></script>
+    <div id="p5"></div>
+</body>
 
-
-            // text
-            ctx.textAlign = "center"
-            ctx.textBaseline = "middle"
-            ctx.fillStyle = "white"
-
-            let fontSize = window.innerWidth < 800 ? 10 : 10
-            let height2 = ctx.canvas.height / 2
-
-            let width2 = ctx.canvas.width / 2
-            ctx.font = `${fontSize}px Gruppo`;
-            // ctx.fillText("ls",width2,height2);
-
-            var link = document.createElement('link');
-            console.log(link)
-            link.type = 'image/x-icon';
-            link.rel = 'shortcut icon';
-            link.href = canvas.toDataURL("image/x-icon");
-            document.getElementsByTagName('head')[0].appendChild(link);
-        </script>
-        <div id='root'></div>
-        <script src="../src/index.js"></script>
-        <div id="p5"></div>
-    </body>
 </html>
