changed ico typ

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="./defaultFavicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./defaultFavicon.png" />
+    
     <script>
         if (!navigator.userAgent.includes("Chrome") && !navigator.userAgent.includes("Apple") || window.innerWidth >= 800) {
             var canvas = document.createElement('canvas');
